--- a/1on1.md
+++ b/1on1.md
@@ -24,8 +24,12 @@ Constructive, honest, and well meant
 Any near-future things that might be useful for your context  
 Think product shifts, team changes, or upcoming opportunities
 
+### Personal Goals
+
+Go through a document shared only between us [(this one)](./personal-goals-doc.md), connect feedback (mutual) to items in the document, think ahead of near future tasks that might be relevant. 
+
 ## What shouldn’t wait for the 1:1s?
 
 Anything that makes you ask  
 "Should I wait for the 1:1 to raise this?"  
-The answer is probably no — ping me
+The answer is probably no - ping me
